# mandelbrot-set

./: .gitignore  CMakeLists.txt  Makefile  Makefile-deb-arm  Makefile-fbsd-amd64  README.md  config.h  img.c  img.h  mandelbrot.c  mandelbrot.h  queue.c
